Jumbotrons in carousel have correct spacing now, also edited the text size again. Also fixed some html that I fucked up earlier.

--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -130,14 +130,16 @@ h4 {
     margin: 0%;
     
     position: absolute;
-    /* left: 50%;
-    bottom: -5%;
-    transform: translate(-50%, -50%); */
+    /* bottom: calc(2% + 47px); */
+    bottom: 67px;
 }
 .carousel-inner .active {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.carousel-indicators {
+    margin-bottom: 0px;
 }
 .carousel-indicators .active {
     background-color: white !important;
@@ -269,6 +271,10 @@ h4 {
     .carousel-text p {
         font-size: 2.1vw;
     }
+    .carousel-indicators {
+        margin-bottom: 0px;
+        bottom: 20px;
+    }
 
 
 
@@ -314,6 +320,6 @@ h4 {
         font-size: 8vw;
     }
     .carousel-text p {
-        font-size: 4vw;
+        font-size: 3.5vw;
     }
 }
